practice_file_added

--- a/01_Python/02_변수와 데이터타입.ipynb
+++ b/01_Python/02_변수와 데이터타입.ipynb
@@ -317,6 +317,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -860,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -871,12 +878,55 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "이름: 홍길동\n"
+      "이름: 김병만\n"
      ]
     }
    ],
    "source": [
     "a = input(\"이름:\")  # 문자열로 입력받는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김병만\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = '김병만'\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please input your name: james\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "james\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input('Please input your name:')\n",
+    "print(a)"
    ]
   },
   {
@@ -964,14 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "시 이름:  광주\n"
+      "시 이름:  블랙스버그\n"
      ]
     }
    ],
@@ -981,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -998,21 +1048,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "나이: 30\n"
+      "나이: 29\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "age = input(\"나이:\")\n",
     "# 숫자형태의 문자열을 정수로 변환\n",
-    "age = int(age)"
+    "# age = int(age)\n",
+    "type(age)"
    ]
   },
   {
@@ -1240,14 +1301,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "숫자: -5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "음수\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('숫자:'))\n",
+    "result = '양수'if a>0 else '음수'\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1336,7 @@
        "'1'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,21 +1433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1번줄\n",
-      "2번줄\n",
-      "3번줄\n"
+      "1번줄\\n2번줄\\n3번줄\n"
      ]
     }
    ],
    "source": [
-    "txt3 = \"1번줄\\n2번줄\\n3번줄\"\n",
+    "txt3 = r\"1번줄\\n2번줄\\n3번줄\"\n",
     "print(txt3)"
    ]
   },
@@ -1395,19 +1473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\tb\n"
+      "a\\tb\n"
      ]
     }
    ],
    "source": [
-    "print(\"a\\tb\")"
+    "print(r\"a\\tb\")"
    ]
   },
   {
@@ -1598,7 +1676,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address = \"서울시 종로구 명륜동\"\n",
+    "\n",
+    "\"종로\" in address  #address안에 \"종로\" 가 있는지?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1607,17 +1707,21 @@
        "False"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "address = \"서울시 종로구 명륜동\"\n",
-    "\n",
-    "\"종로\" in address  #address안에 \"종로\" 가 있는지?\n",
     "\"독산\" in address"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2257,21 +2361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 3\n"
+      "6 1\n",
+      "a\n"
      ]
     }
    ],
    "source": [
     "s = \"  a   \"\n",
     "s2 = s.strip()\n",
-    "print(len(s), len(s2))"
+    "print(len(s), len(s2))\n",
+    "print(s2)"
    ]
   },
   {
@@ -2297,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2308,12 +2414,40 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Name: John\n"
+      "Name: earl grey\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Name:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "earl grey\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'John grey'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(name)\n",
+    "name.replace('earl','John')"
    ]
   },
   {
@@ -2429,27 +2563,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.naver.com\"\n",
+    "url.endswith(\"co.kr\")\n",
+    "url.endswith(\".com\")\n",
+    "url.startswith(\"https\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://www.naver.com\"\n",
-    "url.endswith(\"co.kr\")\n",
-    "url.endswith(\".com\")\n",
-    "url.startswith(\"https\")\n",
     "url.startswith('www')\n",
-    "'naver' in url"
+    "# 'naver' in url"
    ]
   },
   {
@@ -2681,6 +2823,26 @@
    ],
    "source": [
     "float(True), float(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(False)"
    ]
   },
   {
@@ -2920,9 +3082,73 @@
    ],
    "source": [
     "#1. 주민번호 \"901211-1027213\"의 앞 6자리만 조회해서 출력하시오.\n",
-    "jumin_num = \"901211-1027213\"\n",
+    "\n",
     "print(jumin_num[ : 6])\n",
     "print(jumin_num.split(\"-\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jumin_num = \"901211-1027213\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'901211'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jumin_num[:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'hello\\n'\n",
+    "print(a*10)"
    ]
   },
   {
@@ -2982,7 +3208,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of letters:24\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_value = \"akdlclkdkdlelql39du7마구0ㅌ\" \n",
+    "print(f'# of letters:{len(str_value)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#4.\n",
+    "name=\"TV\"\n",
+    "price=300000\n",
+    "maker = \"LG\"\n",
+    "# 위 변수의 값을 다음과 같은 형태로 출력하시오.\n",
+    "#\"제품명 : TV, 가격 : 300000, 제조사 : LG\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product name:TV, price:300000, maker:LG\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'product name:{name}, price:{price}, maker:{maker}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3000,12 +3300,6 @@
     }
    ],
    "source": [
-    "#4.\n",
-    "name=\"TV\"\n",
-    "price=300000\n",
-    "maker = \"LG\"\n",
-    "# 위 변수의 값을 다음과 같은 형태로 출력하시오.\n",
-    "#\"제품명 : TV, 가격 : 300000, 제조사 : LG\"\n",
     "info1 = \"제품명: {}, 가격: {}, 제조사: {}\".format(name, price, maker)\n",
     "print(info1)\n",
     "info2 = \"제품명: %s, 가격: %d, 제조사: %s\" % (name, price, maker)\n",
@@ -3016,7 +3310,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#5.\n",
+    "fruits = \"사과 복숭아 귤 배\"\n",
+    "# 위 fruits에 \"수박\"이 있는지 확인하는 코드를 작성하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = '귤'\n",
+    "print('yes' if a in fruits else 'no')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3032,15 +3363,73 @@
     }
    ],
    "source": [
-    "#5.\n",
-    "fruits = \"사과 복숭아 귤 배\"\n",
-    "# 위 fruits에 \"수박\"이 있는지 확인하는 코드를 작성하시오.\n",
     "print(\"있음\" if \"수박\" in fruits else \"없음\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#6.\n",
+    "str_value=\"aldkjaldjfalfjlksajfladlkaalalkdjfa\"\n",
+    "# str_value 문자열안에 a가 몇개 있는지 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_value.count('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3059,9 +3448,6 @@
     }
    ],
    "source": [
-    "#6.\n",
-    "str_value=\"aldkjaldjfalfjlksajfladlkaalalkdjfa\"\n",
-    "# str_value 문자열안에 a가 몇개 있는지 출력하시오.\n",
     "len(str_value)\n",
     "str_value.count(\"a\")\n",
     "str_value.count(\"al\")"
@@ -3069,7 +3455,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#7. 두개의 정수를 입력받아서 곱한 결과를 출력하는 코드를 작성하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3080,22 +3479,91 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "num1: 10\n",
-      "num2: 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10  X 5 = 50\n"
+      "input your first number 30\n",
+      "input your second number 500\n"
      ]
     }
    ],
    "source": [
-    "#7. 두개의 정수를 입력받아서 곱한 결과를 출력하는 코드를 작성하세요.\n",
+    "n1 = int(input(\"input your first number\"))\n",
+    "n2 = int(input('input your second number'))\n",
+    "result = f'{n1} * {n2} = {n1*n2}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 * 500 = 15000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "num1: 30\n",
+      "num2: 500\n"
+     ]
+    }
+   ],
+   "source": [
     "n1 = int(input(\"num1:\"))  # 입력받은 문자열을 정수로 변환\n",
-    "n2 = int(input(\"num2:\"))\n",
+    "n2 = int(input(\"num2:\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30  X 500 = 15000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "print(f\"{n1}  X {n2} = {n1 * n2}\")"
    ]
   },
@@ -3128,7 +3596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
