--- a/01_Python/05_함수.ipynb
+++ b/01_Python/05_함수.ipynb
@@ -127,6 +127,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(): \n",
+    "    print(\"hello there\")\n",
+    "    print(\"nice to meet you\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(name):\n",
+    "    print(f\"hello there {name}. Nice to meet you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello there eddie. Nice to meet you\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet(\"eddie\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -275,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -291,6 +329,27 @@
     "    txt = f\"{name} 님 안녕하세요.\\n반갑습니다.\"\n",
     "    return txt\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "greet4() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgreet4\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: greet4() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "greet4()"
    ]
   },
   {
@@ -355,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +440,7 @@
        "(12, 8, 20, 5.0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +452,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1050, 950, 50000, 20.0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate(1000,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +534,9 @@
     "        print(f\"{name}님 안녕하세요\")\n",
     "\n",
     "greet(\"이순신\")\n",
-    "greet() # name은 None을 사용"
+    "greet() # name은 None을 사용\n",
+    "# A parameter is the variable listed inside the parentheses in the function definition. \n",
+    "# An argument is the value that are sent to the function when it is called."
    ]
   },
   {
@@ -565,13 +646,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def greet7(name, age, address=None):\n",
+    "def greet7(name, age, address='VA'):\n",
     "    print(name, age, address)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lkee 30 seoul\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet7('lkee',30,'seoul')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -658,6 +770,8 @@
     }
    },
    "source": [
+    "\n",
+    "\n",
     "### 가변인자 (Var args) 파라미터\n",
     "\n",
     "-   호출하는 쪽에서 argument로 0 ~ n개의 값을 나열해서 여러개의 값들을 전달하면 **tuple이나 dictionary로 묶어서** 받을 수있도록 선언하는 parameter\n",
@@ -692,6 +806,36 @@
     "    for v in nums:\n",
     "        result += v\n",
     "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summation(*numbers):\n",
+    "    result = 0\n",
+    "    for v in numbers:\n",
+    "        result += v\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "summation(1,5,7)"
    ]
   },
   {
@@ -765,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -865,6 +1009,7 @@
     }
    },
    "source": [
+    "## 여기부터\n",
     "# 변수의 유효범위 (scope)\n",
     "\n",
     "-   **지역변수 (local variable)**\n",
@@ -1423,6 +1568,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plus_l = lambda a, b : a + b "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1010"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plus_l(10,1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
    "outputs": [],
@@ -1613,14 +1787,31 @@
     "    if include_stop:\n",
     "        stop = stop + 1\n",
     "        \n",
-    "    for v in range(start, stop):\n",
-    "        result += v\n",
+    "    for v in range(start, stop):incl\n",
+    "        result += vincl\n",
     "    return result    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yessum(start, stop, include_stop = False):\n",
+    "    result = 0 \n",
+    "    if include_stop:\n",
+    "        stop = stop + 1\n",
+    "\n",
+    "    for v in range(start, stop):\n",
+    "        result += v\n",
+    "    return result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1629,14 +1820,32 @@
        "15"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summation(1, 5, True)"
+    "yessum(1, 5, True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1666,6 +1875,22 @@
     "    for v in range(start, stop):\n",
     "        result += v\n",
     "    return result    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yessum2(start = 0, stop = 10, include_stop = False):\n",
+    "    result = 0\n",
+    "    if include_stop:\n",
+    "        stop = stop + 1\n",
+    "\n",
+    "    for v in range(start, stop):\n",
+    "        result += v\n",
+    "    return result\n"
    ]
   },
   {
@@ -1746,6 +1971,96 @@
     "# - 30이상이면 비만으로 하는데\n",
     "# 몸무게와 키를 매개변수로 받아 비만인지 과체중인지 반환하는 함수를 구현하시오."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amifat(a,b):\n",
+    "    \"\"\"\n",
+    "    This is a function to tell you whether you have to go on a diet or not\n",
+    "    \"\"\"\n",
+    "    bmi = b/(a/100)**2\n",
+    "    if bmi > 30:\n",
+    "        result = \"obese\"\n",
+    "    elif bmi > 25:\n",
+    "        result = \"overweight\"\n",
+    "    elif bmi > 18.5 :\n",
+    "        result = \"normal\"\n",
+    "    else :\n",
+    "        result = \"underweight\"\n",
+    "    return print(f\"your bmi is {bmi} result is {result}\")\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your bmi is 26.729927495071667 result is overweight\n"
+     ]
+    }
+   ],
+   "source": [
+    "amifat(173,80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function amifat in module __main__:\n",
+      "\n",
+      "amifat(a, b)\n",
+      "    This is to tell you whether you have to go on a diet or not\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(amifat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1872,7 +2187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
