--- a/01_Python/03_자료구조.ipynb
+++ b/01_Python/03_자료구조.ipynb
@@ -2864,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "id": "42b6f5f4-5832-45e2-a1c5-7a58cec01273",
    "metadata": {
     "slideshow": {
@@ -2878,7 +2878,7 @@
        "80"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "id": "012551bd-caa9-4d6a-a286-442cf0aa796d",
    "metadata": {
     "slideshow": {
@@ -2981,7 +2981,7 @@
        "[90, 80, 100, 90, 85]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,8 +3019,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "a068bf33-e6da-49cc-938d-c44e100e90b2",
+   "execution_count": 10,
+   "id": "e728d4e6-24cf-43b6-9219-f9cefc1dfa1f",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3031,13 +3031,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100, 90, 100, 80, 70, 100, 80, 90, 95, 85]\n",
       "[100, 90, 100, 80, 70, 100, 80, 90, 20, 85]\n"
      ]
     }
    ],
    "source": [
     "#(6) 9번의 점수를 20으로 변경하고 전체 출력하세요.\n",
+    "jumsu[8] = 20\n",
+    "print(jumsu)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9e33057d-7d79-45da-ade3-6274a3eea456",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "print(jumsu)\n",
     "jumsu[8] = 20\n",
     "print(jumsu)"
@@ -3045,8 +3057,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "95fbc8cf-e75b-464d-8422-f9ab5033aca1",
+   "execution_count": 13,
+   "id": "c75ecb87-3c98-467c-bcbc-062d96b05234",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 70, 80, 20, 85, 90]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(7) 중복된 점수는 제거하고 하나씩만 나오도록 출력하세요.\n",
+    "type(jumsu)\n",
+    "list(set(jumsu))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34aa6676-790c-4990-9116-003f33f37cdf",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3065,14 +3104,46 @@
     }
    ],
    "source": [
-    "#(7) 중복된 점수는 제거하고 하나씩만 나오도록 출력하세요.\n",
     "list(set(jumsu))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "68c215c1-57cf-4373-abf0-b9d5b036c739",
+   "execution_count": 22,
+   "id": "d6c6a741-e7d0-40f1-b543-ff89c0acfdf1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['복숭아', '수박', '딸기', '사과', '귤']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 문제 8 ~ 9\n",
+    "fruits = [\"복숭아\", \"수박\", \"딸기\"]\n",
+    "\n",
+    "#(8) fruits 리스트에 마지막 원소로 \"사과\", \"귤\"을 추가하세요.\n",
+    "# fruits.append(\"사과\")\n",
+    "# fruits.append(\"귤\")\n",
+    "fruits.extend(['사과','귤'])\n",
+    "# fruits.remove(['사과','귤'])\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ff5282-9360-4cc2-9e8e-25e0141f91f7",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3091,19 +3162,13 @@
     }
    ],
    "source": [
-    "# 문제 8 ~ 9\n",
-    "fruits = [\"복숭아\", \"수박\", \"딸기\"]\n",
-    "\n",
-    "#(8) fruits 리스트에 마지막 원소로 \"사과\", \"귤\"을 추가하세요.\n",
-    "# fruits.append(\"사과\")\n",
-    "# fruits.append(\"귤\")\n",
     "fruits.extend([\"사과\", \"귤\"])\n",
     "fruits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 31,
    "id": "da3d740e-dca8-4eb0-81e1-d24f462d2a4e",
    "metadata": {
     "slideshow": {
@@ -3114,18 +3179,22 @@
     {
      "data": {
       "text/plain": [
-       "['수박', '딸기', '사과', '귤']"
+       "['딸기', '사과', '귤']"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#(9) fruits 리스트에서 \"복숭아\"를 제거하세요.\n",
-    "i = fruits.index(\"복숭아\")\n",
-    "fruits.pop(i)   #del fruits[i]\n",
+    "\n",
+    "# fruits.remove('복숭아')\n",
+    "# fruits.index('수박')\n",
+    "# fruits.pop(0)\n",
+    "# i = fruits.index(\"복숭아\")\n",
+    "# fruits.pop(i)   #del fruits[i]\n",
     "fruits"
    ]
   },
@@ -3153,8 +3222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "833c5d82-b90d-46af-84e9-b0c58403f4f5",
+   "execution_count": null,
+   "id": "27a4056e-1382-4d8d-bb61-be42d6c778ea",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3165,6 +3234,48 @@
     "# 문제 10 ~ 15\n",
     "#(10)본인의 이름, 나이, email주소, 취미, 결혼유무를 사전(딕셔너리)으로 생성. \n",
     "# 취미는 2개 이상의 값을 넣는다..\n",
+    "info = {\n",
+    "    \"name\" : \"kim\",\n",
+    "    \"age\" : 30,\n",
+    "    \"email\": 'asdf@naver.com',\n",
+    "    'hobby': ['a','b'],\n",
+    "    'marriage': 'N/A'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4aea3a3d-bdee-4af6-8619-b341043fd96b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : kim email address: asdf@naver.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"name : {info['name']} email address: {info['email']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4138b6dc-e19d-4790-ba46-0cf075a2cc53",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
     "info = {\n",
     "    \"이름\":\"홍길동\",\n",
     "    \"나이\":20,\n",
@@ -3200,8 +3311,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "acfdaf65-a239-4afb-a7a9-0f7ad3803724",
+   "execution_count": null,
+   "id": "ea03cc44-4c7a-4be3-b634-e35025b5d0a6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#(12) 위 딕셔너리에서 취미중 두번째 취미를 조회해서 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "464db708-c5c2-4da8-aea9-56eef4099de7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(info['hobby'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f56fc4e-da3c-4726-8c14-e075c6ddbabd",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3220,7 +3367,6 @@
     }
    ],
    "source": [
-    "#(12) 위 딕셔너리에서 취미중 두번째 취미를 조회해서 출력하세요.\n",
     "info['취미'][1]"
    ]
   },
@@ -3260,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 41,
    "id": "6ac5ad69-b290-4183-92a0-b05a864d698b",
    "metadata": {
     "slideshow": {
@@ -3271,30 +3417,26 @@
     {
      "data": {
       "text/plain": [
-       "{'이름': '홍길동',\n",
-       " '나이': 20,\n",
-       " 'email주소': 'honggd@naver.com',\n",
-       " '취미': ['독서', '영화감상', '게임'],\n",
-       " '결혼여부': False,\n",
-       " '키': 172.15,\n",
-       " '몸무게': 72.6,\n",
-       " 'Email주소': 'honggd@naver.com'}"
+       "{'name': 'kim',\n",
+       " 'email': 'honggd@naver.com',\n",
+       " 'hobby': ['a', 'b'],\n",
+       " 'marriage': 'N/A'}"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#(14) 위 딕셔너리에서 email 주소를 다른 값으로 변경하세요.\n",
-    "info['email주소'] = \"honggd@naver.com\"\n",
+    "info['email'] = \"honggd@naver.com\"\n",
     "info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 40,
    "id": "5bea4f47-fd54-4886-b9d9-1ae6d923aed0",
    "metadata": {
     "scrolled": true,
@@ -3306,54 +3448,58 @@
     {
      "data": {
       "text/plain": [
-       "{'이름': '홍길동',\n",
-       " 'email주소': 'honggd@naver.com',\n",
-       " '취미': ['독서', '영화감상', '게임'],\n",
-       " '결혼여부': False,\n",
-       " '키': 172.15,\n",
-       " '몸무게': 72.6,\n",
-       " 'Email주소': 'honggd@naver.com'}"
+       "{'name': 'kim',\n",
+       " 'email': 'asdf@naver.com',\n",
+       " 'hobby': ['a', 'b'],\n",
+       " 'marriage': 'N/A'}"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#(15) 위 딕셔너리에서 나이를 제거하세요.\n",
-    "info.pop(\"나이\")\n",
+    "info.pop('age')\n",
     "info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 43,
    "id": "635c3cee-0d18-4f2e-8edb-471bea6df675",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'marriage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmarriage\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'marriage'"
+     ]
+    }
+   ],
    "source": [
-    "del info['결혼여부']"
+    "del info['marriage']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 44,
    "id": "94b9150d-3521-4f87-b571-9f9cc43b716e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'이름': '홍길동',\n",
-       " 'email주소': 'honggd@naver.com',\n",
-       " '취미': ['독서', '영화감상', '게임'],\n",
-       " '키': 172.15,\n",
-       " '몸무게': 72.6,\n",
-       " 'Email주소': 'honggd@naver.com'}"
+       "{'name': 'kim', 'email': 'honggd@naver.com', 'hobby': ['a', 'b']}"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3379,7 +3525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
